# CppProjectTemplate

./: .gitignore  CMakeLists.txt  README.md  helper  makefile
.github/workflows/: tests.yml
include/: header.h
src/: main.cpp  source.cpp
test/: tests.cpp
